Arreglo de las rutas de imagenes para que se puedan ver en la web

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/carrito.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="carrito.css">
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
   <header class="header_fondo" id="Inicio">
     <div class="header_barra">
      <div class="header_logo">
-         <img class="header_logoImg" src="./img/LogoBlancoVerde.png" alt="logo de viaja libre">
+         <img class="header_logoImg" src="img/LogoBlancoVerde.png" alt="logo de viaja libre">
      </div>
      <nav class="header_navegacion">
         <a href="#Inicio" class="nav_navecagionItem1 nav_navegacionItem">Inicio</a>
@@ -31,7 +31,7 @@
         <a href="#Lugares" class="nav_navecagionItem3 nav_navegacionItem">Lugares</a>
         <a href="#Contacto" class="nav_navecagionItem4 nav_navegacionItem">Contacto</a>
         <a class="nav_navecagionItem5 nav_navegacionItem" id="fondo">Fondo</a>
-        <img class="iconoCarrito" src="./img/iconoPasaje.png" alt="">
+        <img class="iconoCarrito" src="img/iconoPasaje.png" alt="">
      </nav>
     </div>
     <!--Carrito compras-->
@@ -54,7 +54,7 @@
       <p class="sobreNosotros_caja1Texto">Bienvenidos a Viaja Libre, tu guía digital para explorar los destinos más emocionantes del mundo. <br>En Viaja Libre, nos apasiona compartir nuestra fascinación por los viajes y descubrir nuevos horizontes. <br>Nuestro equipo está compuesto por amantes de la aventura, exploradores incansables y expertos en turismo <br> todos unidos por un objetivo común: brindarte experiencias inolvidables.</p>
     </div>
     <div class="sobreNosotros_caja2">
-      <img class="sobreNosotros_caja2Img" src="./img/LogoBlancoVerde.png" alt="logo Viaja Libre verde">
+      <img class="sobreNosotros_caja2Img" src="img/LogoBlancoVerde.png" alt="logo Viaja Libre verde">
     </div>
   </article>
 
@@ -66,11 +66,11 @@
     
   <article class="articulo_lugares" id="Lugares">
 
-    <img class="articulo_lugaresImg" src="./img/LugaresBlancoVerde.png" alt="Imagen de lugares">
+    <img class="articulo_lugaresImg" src="img/LugaresBlancoVerde.png" alt="Imagen de lugares">
 
   <div class="lugares">
     <div class="lugares_caja lugares_frente">
-      <img class="lugares_cajaImg" src="./img/Paisaje.jpeg" alt="">
+      <img class="lugares_cajaImg" src="img/Paisaje.jpeg" alt="">
       <h2 class="lugares_cajaTituloFrente">Noruerga</h2>
     </div>
     <div class="lugares_caja lugares_atras">
@@ -86,7 +86,7 @@
 
   <div class="lugares" id="Lugares">
     <div class="lugares_caja lugares_frente">
-      <img class="lugares_cajaImg" src="./img/Zakopane.jpg" alt="">
+      <img class="lugares_cajaImg" src="img/Zakopane.jpg" alt="">
       <h2 class="lugares_cajaTituloFrente">Polonia</h2>
     </div>
     <div class="lugares_caja lugares_atras">
@@ -101,7 +101,7 @@
 
   <div class="lugares">
     <div class="lugares_caja lugares_frente">
-      <img class="lugares_cajaImg" src="./img/Bali-Indonesia.jpg" alt="">
+      <img class="lugares_cajaImg" src="img/Bali-Indonesia.jpg" alt="">
       <h2 class="lugares_cajaTituloFrente">Indonesia</h2>
     </div>
     <div class="lugares_caja lugares_atras">
@@ -116,7 +116,7 @@
 
   <div class="lugares">
     <div class="lugares_caja lugares_frente">
-      <img class="lugares_cajaImg" src="./img/LagoEsmeralda.jpg" alt="">
+      <img class="lugares_cajaImg" src="img/LagoEsmeralda.jpg" alt="">
       <h2 class="lugares_cajaTituloFrente">Canada</h2>
     </div>
     <div class="lugares_caja lugares_atras">
